--- a/src/index.html
+++ b/src/index.html
@@ -56,7 +56,7 @@ Tahun: 2025
     <div class="breadcrumbs">
         <div class="breadcrumbs-container">
             <ul>
-                <li><a href="#"></a>Beranda</a></li>
+                <li><a href="#">Beranda</a></li>
                 <li>Tentang Kami</li>
             </ul>
         </div>
@@ -345,13 +345,13 @@ Tahun: 2025
                 <div class="footer-widget">
                     <h3>Tautan Cepat</h3>
                     <ul class="footer-links">
-                        <li><a href="#"></a>Beranda</a></li>
+                        <li><a href="#">Beranda</a></li>
                         <li><a href="#">Tentang Kami</a></li>
-                        <li><a href="#"></a>Program</a></li>
-                        <li><a href="#"></a>Berita</a></li>
-                        <li><a href="#"></a>Galeri</a></li>
-                        <li><a href="#"></a>Pendaftaran</a></li>
-                        <li><a href="#"></a>Kontak</a></li>
+                        <li><a href="#">Program</a></li>
+                        <li><a href="#">Berita</a></li>
+                        <li><a href="#">Galeri</a></li>
+                        <li><a href="#">Pendaftaran</a></li>
+                        <li><a href="#">Kontak</a></li>
                     </ul>
                 </div>
                 <div class="footer-widget">
