[Update] organize the code

--- a/src/index.html
+++ b/src/index.html
@@ -357,9 +357,9 @@ Tahun: 2025
                 <div class="footer-widget">
                     <h3>Program</h3>
                     <ul class="footer-links">
-                        <li><a href="#"></a>MPK</a></li>
-                        <li><a href="#"></a>OSIS</a></li>
-                        <li><a href="#"></a>Paspansus</a></li>
+                        <li><a href="#">MPK</a></li>
+                        <li><a href="#">OSIS</a></li>
+                        <li><a href="#">Paspansus</a></li>
                     </ul>
                 </div>
                 <div class="footer-widget">
