[Update] move file to root

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ Tahun: 2025
     <header>
         <div class="header-container">
             <div class="logo">
-                <img src="../assets/CONTOH_LOGO_SEKOLAH_PRESTASI.png" alt="Logo Sekolah Prestasi Indonesia">
+                <img src="assets/CONTOH_LOGO_SEKOLAH_PRESTASI.png" alt="Logo Sekolah Prestasi Indonesia">
                 <div class="logo-text">
                     <h1>Sekolah Prestasi</h1>
                     <p>Mengembangkan Potensi, Meraih Prestasi</p>
@@ -79,13 +79,13 @@ Tahun: 2025
                     <p>Hari ini, kami bangga telah menjadi salah satu lembaga pendidikan terdepan yang telah mencetak ribuan alumni yang sukses dalam berbagai bidang kehidupan.</p>
                 </div>
                 <div class="about-story-image scroll-reveal">
-                    <img src="..//assets/CONTOH_FOTO.png" alt="Sejarah Sekolah Prestasi Indonesia">
+                    <img src="assets/CONTOH_FOTO.png" alt="Sejarah Sekolah Prestasi Indonesia">
                 </div>
             </div>
 
             <div class="about-story">
                 <div class="about-story-image scroll-reveal">
-                    <img src="../assets/CONTOH_FOTO.png" alt="Pendekatan Pembelajaran Kami">
+                    <img src="assets/CONTOH_FOTO.png" alt="Pendekatan Pembelajaran Kami">
                 </div>
                 <div class="about-story-text scroll-reveal">
                     <!--CONTOH-->
@@ -194,7 +194,7 @@ Tahun: 2025
                 <div class="team-grid">
                     <div class="team-member scroll-reveal">
                         <div class="member-image">
-                            <img src="../assets/PROFIL_ANGGOTA_SEKOLAH_PRESTASI.png" alt="Kepala Sekolah">
+                            <img src="assets/PROFIL_ANGGOTA_SEKOLAH_PRESTASI.png" alt="Kepala Sekolah">
                             <div class="member-social">
                                 <a href="#"><i class="fa fa-linkedin"></i></a>
                                 <a href="#"><i class="fa fa-twitter"></i></a>
@@ -208,7 +208,7 @@ Tahun: 2025
                     </div>
                     <div class="team-member scroll-reveal">
                         <div class="member-image">
-                            <img src="../assets/PROFIL_ANGGOTA_SEKOLAH_PRESTASI.png" alt="Wakil Kepala Sekolah">
+                            <img src="assets/PROFIL_ANGGOTA_SEKOLAH_PRESTASI.png" alt="Wakil Kepala Sekolah">
                             <div class="member-social">
                                 <a href="#"><i class="fa fa-linkedin"></i></a>
                                 <a href="#"><i class="fa fa-twitter"></i></a>
@@ -222,7 +222,7 @@ Tahun: 2025
                     </div>
                     <div class="team-member scroll-reveal">
                         <div class="member-image">
-                            <img src="../assets/PROFIL_ANGGOTA_SEKOLAH_PRESTASI.png" alt="Koordinator Kurikulum">
+                            <img src="assets/PROFIL_ANGGOTA_SEKOLAH_PRESTASI.png" alt="Koordinator Kurikulum">
                             <div class="member-social">
                                 <a href="#"><i class="fa fa-linkedin"></i></a>
                                 <a href="#"><i class="fa fa-twitter"></i></a>
@@ -236,7 +236,7 @@ Tahun: 2025
                     </div>
                     <div class="team-member scroll-reveal">
                         <div class="member-image">
-                            <img src="../assets/PROFIL_ANGGOTA_SEKOLAH_PRESTASI.png" alt="Guru Senior">
+                            <img src="assets/PROFIL_ANGGOTA_SEKOLAH_PRESTASI.png" alt="Guru Senior">
                             <div class="member-social">
                                 <a href="#"><i class="fa fa-linkedin"></i></a>
                                 <a href="#"><i class="fa fa-twitter"></i></a>
