--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@ Tahun: 2025
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tentang Kami - Sekolah Prestasi Indonesia</title>
+    <link rel="icon" href="assets/CONTOH_LOGO_SEKOLAH_PRESTASI.png" type="image/png">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/js/all.min.js"></script>
     <link rel="stylesheet" href="App.css">
     <script src="App.js"></script>
